# TelegramSpamGuardBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  logger.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py
app/bootstrap/: __init__.py  application.py  command.py  lifecycle.py  verification_restore.py  verification_timer.py
app/bot/: __init__.py
app/bot/controller/: __init__.py
app/bot/keyboard/: __init__.py  reply.py  verification.py
app/bot/middleware/: __init__.py  redis.py
app/bot/state/: __init__.py  user.py
app/bot/util/: __init__.py  telegram_api.py  text.py
app/cache/: redis.py
app/config/: __init__.py  settings.py
app/core/services/: moderation.py  verification.py
app/domain/: __init__.py  moderation.py  spam.py  stopword.py  verification.py
app/domain/data/: __init__.py
app/infrastructure/: __init__.py
app/infrastructure/llm/: __init__.py  client.py  (+1 more)
app/observability/: __init__.py  logging.py
app/usecase/: __init__.py  contract.py
db/: database.py
filters/: stopwords.py
handlers/: verification.py
scripts/: make_help.py
tests/: test_admin_action_mode.py  test_moderation_actions.py  test_project_architecture.py  test_redis_integration.py  test_redis_repositories.py  test_secret_hygiene.py  test_spam_detector.py  test_stopwords.py  test_verification_callback.py  test_verification_service.py  test_verification_start.py  test_verification_timeout.py  test_verification_timer_restore.py
tests/support/: verification.py
utils/: logger.py
(+44 files in other folders)
